cohort3/triforciacohort3pack/force-app/main/default/objects/Course__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <label>Cohort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>