cohort3/triforciacohort3pack/force-app/main/default/objects/Course__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <label>End</label>
    <type>Date</type>
</CustomField>