cohort3/triforciacohort3pack/force-app/main/default/objects/Course__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <length>25</length>
    <type>Text</type>
</CustomField>