cohort3/triforciacohort3pack/force-app/main/default/objects/Course__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <label>Start</label>
    <type>Date</type>
</CustomField>