cohort3/triforciacohort3pack/force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Start__c</columns>
    <columns>Cohort__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>